--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 .terraform/providers/registry.terraform.io/hashicorp/aws/*/darwin_arm64/terraform-provider-aws_v*_x* filter=lfs diff=lfs merge=lfs -text
+/Users/sirshakdolai/Desktop/Terraform/.terraform/providers/registry.terraform.io/hashicorp/aws/5.28.0/darwin_arm64/terraform-provider-aws_v5.28.0_x5 filter=lfs diff=lfs merge=lfs -text
